# leapocr-python

./: CHANGELOG.md  LICENSE  Makefile  QUICKSTART.md  README.md  main.py  openapi.json  pyproject.toml  test_api_connectivity.py  test_simple_client.py
.github/workflows/: ci.yml  integration-tests.yml
examples/: README.md  advanced.py  basic.py
examples/advanced/: batch_processing.py  custom_config.py  job_management.py  model_selection.py  schema_extraction.py  template_usage.py
examples/basic/: process_file.py  process_url.py
leapocr/: __init__.py  client.py  errors.py  models.py  ocr.py
leapocr/_internal/: validation.py
scripts/: filter-sdk-endpoints.sh  generate-sdk.sh
src/leapocr/: __init__.py  client.py  exceptions.py  types.py
src/leapocr/services/: __init__.py  ocr.py
tests/: conftest.py  test_client.py  test_integration.py
tests/integration/: test_ocr.py
tests/unit/: test_models.py
